fix code alignment weirdness

--- a/_scss/modules/_post.scss
+++ b/_scss/modules/_post.scss
@@ -102,6 +102,9 @@
       line-height: 1.5;
     }
   }
+  pre {
+    text-align: left;
+  }
 }
 
 // Article footer
